src/main/resources/k8syml/01/frontend-dp.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      name: frontend
  replicas: 1 #副本数
  template:
    metadata:
      labels:
        name: frontend
    spec:
      containers:
        - name: frontend
          image: dweizhao/frontend:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "1"
              memory: 2G
            requests:
              cpu: 500m
              memory: 1G
