src/main/resources/k8syml/01/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      nodePort: 80
      protocol: TCP
      name: service-port
  selector:
    name: backend
