src/main/resources/k8syml/01/istio-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: k8s-demo-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - demo.web.com
      port:
        name: http
        number: 80
        protocol: HTTP
